# hri_rlc

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  AGENTS.md  NOTICE  README.md  computed_tourqe.py  computed_tourqe_v2.py  control.py  convert_to_png.py  env.py  gui_control.py  pin_test.py  pyproject.toml  pyrightconfig.json  scene.py  speed_test.py  test_dynamics.py  util.py
rlc_ws/src/rlc_bringup/: package.xml  setup.cfg  setup.py
rlc_ws/src/rlc_bringup/config/: fr3_gz_controllers.yaml  gen3_gz_controllers.yaml
rlc_ws/src/rlc_bringup/launch/: fr3_gz.launch.py  fr3_gz_control.launch.py  fr3_gz_moveit.launch.py  gen3_gz.launch.py  plotjuggler.launch.py  rlc_stack.launch.py
rlc_ws/src/rlc_common/: CMakeLists.txt  package.xml  setup.cfg  setup.py  topics.py
rlc_ws/src/rlc_common/config/: endpoints.yaml
rlc_ws/src/rlc_common/include/rlc_common/: endpoints.hpp
rlc_ws/src/rlc_common/rlc_common/: __init__.py  endpoints.py  topics.py
rlc_ws/src/rlc_common/src/: endpoints.cpp
rlc_ws/src/rlc_controller/: node.py  package.xml  setup.cfg  setup.py
rlc_ws/src/rlc_controller/rlc_controller/nodes/: __init__.py  controller_node.py
rlc_ws/src/rlc_controller_cpp/: CMakeLists.txt  README.md  package.xml  rlc_controller_cpp_plugins.xml
rlc_ws/src/rlc_controller_cpp/include/rlc_controller_cpp/: controller_node.hpp  gen3_controller_node.hpp  realtime_controller.hpp
rlc_ws/src/rlc_controller_cpp/src/: controller_node.cpp  gen3_controller_node.cpp  main.cpp  realtime_controller.cpp
rlc_ws/src/rlc_executive/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_executive/bt_trees/: plan_execute.xml  reactive_core.xml  record_servo_demos.xml
rlc_ws/src/rlc_executive/config/: executor.yaml  planning_profiles.yaml  target_goal.yaml
rlc_ws/src/rlc_executive/launch/: bt.launch.py
rlc_ws/src/rlc_executive/plugins/: bt_plugins.txt
rlc_ws/src/rlc_executive/src/bt/: bt_executor_node.cpp  main.cpp  tree_runner.cpp
rlc_ws/src/rlc_executive/src/bt_nodes/: always_success.cpp  append_trajectory.cpp  bt_utils.cpp  build_motion_plan_request.cpp  execute_trajectory.cpp  fit_max_ent_irl.cpp  load_pose.cpp  moveit_plan.cpp  plugin.cpp  record_servo_demo.cpp  tesseract_plan.cpp
rlc_ws/src/rlc_executive/src/core/: config_loader.cpp  runtime_context.cpp
rlc_ws/src/rlc_executive/src/execution/: moveit_executor.cpp
rlc_ws/src/rlc_executive/src/moveit/: move_group_client.cpp  moveit_servo_client.cpp  servo_joy_frontend.cpp  teleoperation_session.cpp
rlc_ws/src/rlc_executive/src/servo/: joy_mapping.cpp  moveit_servo_client.cpp  servo_joy_frontend.cpp  teleoperation_controller.cpp  teleoperation_session.cpp
rlc_ws/src/rlc_executive/src/state/: state_buffer.cpp
rlc_ws/src/rlc_fr3_moveit_config/: CMakeLists.txt  README.md  package.xml
rlc_ws/src/rlc_fr3_moveit_config/config/: fr3_controllers.yaml  fr3_joint_limits.yaml  fr3_ros_controllers.yaml  kinematics.yaml  ompl_planning.yaml
rlc_ws/src/rlc_fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
rlc_ws/src/rlc_interfaces/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_interfaces/msg/: CartesianState.msg  CurrentPlan.msg  EeTrajPoint.msg  EeTrajectory.msg  EndEffectorTrajectory.msg  FrameStates.msg  JointEffortCmd.msg  JointStateAction.msg  JointStateSim.msg  PlannedCartesianTrajectory.msg  PlannedEeTrajectory.msg  PlannedTrajectory.msg  SimJointState.msg
rlc_ws/src/rlc_interfaces/src/msg/: CartesianState.msg  (+1 more)
rlc_ws/src/rlc_interfaces/srv/: ExecuteTrajectory.srv  PlanJointTrajectory.srv  PlanTrajectory.srv  SetControllerGains.srv  SetControllerMode.srv  SetTargetPoint.srv
rlc_ws/src/rlc_planner/: CMakeLists.txt  package.xml  rlc_planner_plugins.xml  setup.cfg  setup.py
rlc_ws/src/rlc_planner/resource/: rlc_planner
rlc_ws/src/rlc_planner/rlc_planner/: executor_node.py  planner_node.py
rlc_ws/src/rlc_planner/src/: scene_env_adapter.cpp  trajopt_interface.cpp  trajopt_planner_manager.cpp  trajopt_planning_context.cpp
rlc_ws/src/rlc_robot_descriptions/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_robot_descriptions/scripts/: print_urdf.sh
rlc_ws/src/rlc_robot_models/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_robot_models/rlc_robot_models/: __init__.py  gen3.py  kinova_gen3.py  paths.py
rlc_ws/src/rlc_robot_models/src/: kinova_gen3.cpp
rlc_ws/src/rlc_scene_bridge/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_scene_bridge/config/: scene_bridge.yaml
rlc_ws/src/rlc_scene_bridge/src/: moveit_tesseract_bridge.cpp  rlc_scene_bridge_node.cpp  tesseract_env_sync.cpp  tesseract_scene_utils.cpp
rlc_ws/src/rlc_sim/: package.xml  setup.cfg  setup.py
rlc_ws/src/rlc_sim/resource/: rlc_sim
rlc_ws/src/rlc_sim/rlc_sim/: app_gen3.py  ops.py  sim_headless_node.py  sim_viewer_node.py  topics.py
rlc_ws/src/rlc_utils/: CMakeLists.txt  package.xml
rlc_ws/src/rlc_utils/src/: msg_conv.cpp  time_util.cpp
src/rbt_core_cpp/: .clangd  CMakeLists.txt  compile_commands.json  package.xml
src/rbt_core_cpp/cmake/: rbt_core_cppConfig.cmake.in
src/rbt_core_cpp/include/rbt_core_cpp/: controller.hpp  dynamics.hpp  robot.hpp  types.hpp
src/rbt_core_cpp/src/: controller.cpp  dynamics.cpp  robot.cpp
src/rbt_irl/: CMakeLists.txt  package.xml
src/rbt_irl/include/rbt_irl/: max_ent.hpp  max_ent_irl.hpp  utils.hpp
src/rbt_irl/src/: max_ent.cpp  max_ent_irl.cpp
src/rbt_planning/: CMakeLists.txt  package.xml
src/rbt_planning/cmake/: rbt_planningConfig.cmake.in
src/rbt_planning/include/rbt_planning/: interfaces.hpp  ompl_solver.hpp  trajopt_planner.hpp  trajopt_solver.hpp  types.hpp  utils.hpp
src/rbt_planning/src/: ompl_solver.cpp  trajopt_planner.cpp  trajopt_solver.cpp  utils.cpp
src/rbt_types/: CMakeLists.txt  package.xml
src/rbt_types/include/rbt_types/: feature.hpp  math.hpp  objective_term.hpp  trajectory.hpp
src/rbt_types/src/: compile_flags.cpp
src/ros_utils_cpp/: CMakeLists.txt
src/ros_utils_cpp/cmake/: ros_utils_cppConfig.cmake.in
src/ros_utils_cpp/include/ros_utils_cpp/: checks.hpp  msg_conv.hpp  time.hpp  types.hpp
src/ros_utils_cpp/src/: msg_conv.cpp  time.cpp
(+308 files in other folders)
