<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbt_irl</name>
  <version>0.1.0</version>
  <description>Inverse reinforcement learning algorithms.</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rbt_types</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

