<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbt_types</name>
  <version>0.1.0</version>
  <description>Core data types and feature interfaces.</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
