<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlc_bringup</name>
  <version>0.0.0</version>
  <description>Launch and runtime coordination for the RLC stack.</description>
  <maintainer email="asme.kfupm.website@gmail.com">g201951870</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rlc_common</exec_depend>
  <exec_depend>rlc_controller</exec_depend>
  <exec_depend>rlc_interfaces</exec_depend>
  <exec_depend>rlc_planner</exec_depend>
  <exec_depend>rlc_sim</exec_depend>
  <exec_depend>rlc_robot_descriptions</exec_depend>

  <!-- gen3_gz.launch.py runtime deps -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
