<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlc_bringup</name>
  <version>0.0.0</version>
  <description>Minimal bringup for Franka robots in Gazebo and ROS 2.</description>
  <maintainer email="asme.kfupm.website@gmail.com">g201951870</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gazebo_bringup</exec_depend>
  <exec_depend>franka_gz_ros2_control</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rlc_moveit_config</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
