<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlc_controller</name>
  <version>0.0.0</version>
  <description>Kinova Gen3 controller node for the RLC stack.</description>
  <maintainer email="asme.kfupm.website@gmail.com">g201951870</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>common_utils</exec_depend>
  <exec_depend>robots</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rlc_common</exec_depend>
  <exec_depend>rlc_interfaces</exec_depend>
  <exec_depend>rlc_utils</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
